[gd_scene load_steps=8 format=3 uid="uid://c6u2pkc3vdvj8"]

[ext_resource type="Script" path="res://src/world/objects/tutorial/tutorial_hint.gd" id="1_ydksg"]
[ext_resource type="Texture2D" uid="uid://cr21m814ruqga" path="res://addons/ActionIcon/Keyboard/Blank.png" id="2_4562n"]
[ext_resource type="Script" path="res://addons/ActionIcon/ActionIcon.gd" id="3_7dr0o"]

[sub_resource type="Theme" id="Theme_awt46"]
Label/colors/font_color = Color(0.176471, 0.117647, 0.137255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rg0a5"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.764706, 0.721569, 0.635294, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.203922, 0.270588, 0.231373, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false
anti_aliasing_size = 5.0

[sub_resource type="Theme" id="Theme_oojvf"]
Label/font_sizes/font_size = 32

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uyf2s"]
size = Vector2(200, 200)

[node name="TutorialHint" type="Node2D"]
script = ExtResource("1_ydksg")

[node name="Content" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -64.0
offset_right = 130.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_awt46")
theme_override_styles/panel = SubResource("StyleBoxFlat_rg0a5")

[node name="HBoxContainer" type="HBoxContainer" parent="Content"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Keys" type="HBoxContainer" parent="Content/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_oojvf")

[node name="ActionIcon" type="TextureRect" parent="Content/HBoxContainer/Keys"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_4562n")
expand_mode = 1
stretch_mode = 5
script = ExtResource("3_7dr0o")

[node name="SecondaryAction" type="HBoxContainer" parent="Content/HBoxContainer/Keys"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="Content/HBoxContainer/Keys/SecondaryAction"]
layout_mode = 2
text = "+"

[node name="Icon" type="TextureRect" parent="Content/HBoxContainer/Keys/SecondaryAction"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_4562n")
expand_mode = 1
stretch_mode = 5
script = ExtResource("3_7dr0o")

[node name="Hint" type="Label" parent="Content/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 3
vertical_alignment = 1
autowrap_mode = 3

[node name="TriggerArea" type="Area2D" parent="."]
position = Vector2(0, 250)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
shape = SubResource("RectangleShape2D_uyf2s")

[connection signal="body_entered" from="TriggerArea" to="." method="_on_trigger_area_body_entered"]
[connection signal="body_exited" from="TriggerArea" to="." method="_on_trigger_area_body_exited"]
